--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,6 @@
 
 body{
     height: 100vh;
-    overflow: hidden;
     width: 100%;
     background-color: rgb(170, 189, 207);
     font-family: 'Poppins', sans-serif;
@@ -49,10 +48,11 @@ nav {
 .nav-links {
     display: flex;
     width:100%;
+    height:100%;
     align-items:center;
     justify-content:space-around;
     list-style: none;
-} 
+}
 
 .nav-links a {
     text-decoration: none;
@@ -61,8 +61,16 @@ nav {
     transition: all 0.3s ease-in-out;
 }
 
+.logIn button {
+    font-size:20px;
+}
+
 .nav-links a:hover {
     color: #432ee6;
+}
+
+.logIN {
+
 }
 
 .burger {
@@ -153,6 +161,19 @@ main {
     background: linear-gradient(to bottom right,rgb(224, 236, 247, 0.1),rgba(202, 210, 216, 0.8))
 }
 
+.back-image {
+    height:70%;
+    width: 40%;
+    position: absolute;
+    top: 20%;
+    left: 32%;
+    z-index: 1;
+}
+.back-image img {
+    height:550px;
+    width:550px;
+}
+
 .hello {
     display:flex;
     position: absolute;
@@ -162,6 +183,7 @@ main {
     height: 12%;
     border-radius:18px;
     width:15%;
+    z-index: 4;
 }
 .hello-icon {
     display: flex;
@@ -236,6 +258,7 @@ main {
     height: 8%;
     border-radius:12px;
     width:15%;
+    z-index: 4;
 }
 
 .skills h3 {
@@ -243,6 +266,52 @@ main {
     padding: 5px 10px;
     font-size:13px;
     letter-spacing: 0.8px;
+    font-weight: 600;
+}
+
+.certificates {
+    position: absolute;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:19%;
+    width:21%;
+    top: 22%;
+    right: 12%;
+    border-radius: 14px;
+    z-index: 4;
+}
+.icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:85%;
+    padding: 5px 0px;
+    width: 30%;
+    border-right: 1px solid rgb(102, 101, 101, 0.2) ;
+}
+
+.certi-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    margin-left: 3%;
+    padding: 2% 0% 2% 3%;
+    height:100%;
+    width:70%;
+
+}
+
+.certi-text h3 {
+    text-align: center;
+    font-size:20px;
+    margin-bottom: 5px;
+}
+
+.certi-text h5 {
+    font-size: 14px;
     font-weight: 600;
 }
 
@@ -260,13 +329,13 @@ main {
     font-size:10px;
 
 }
- 
+
 
 @media screen and (max-width:960px) {
 
     body {
-        overflow-x: hidden;
         width: 100%;
+        overflow-x: hidden;
     }
 
     header {
@@ -290,7 +359,7 @@ main {
     }
 
     .nav-active {
-        transition:all 0.5s ease-in-out; 
+        transition:all 0.5s ease-in-out;
         background: #432ee6;
         transform: translateX(0%);
         z-index: 2;
@@ -476,3 +545,5 @@ label {
 .name-email input {
     width: 97%;
 }
+
+
